<resources>
    <string name="app_name">Epam Reads</string>
    <string name="search">Поиск книг</string>
    <string name="my_books">Моя книжная полка</string>
    <string name="my_requests">Одолженные книги</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выйти</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_icon">User icon</string>
    <string name="book_image">Book Image</string>
    <string name="book_info">Book Info</string>
    <string name="request_book">Request Book</string>
    <string name="retrieve_book">Retrieve Book</string>
    <string name="call_owner">Call Owner</string>
    <string name="leech_rating">Рейтинг заёмщика:</string>
    <string name="seed_rating">Рейтинг занимателя:</string>
    <string name="sign_in_google">Войти через Google</string>
    <string name="sign_in_facebook">Войти через Facebook</string>
    <string name="facebook_app_id">828647267487031</string>
    <string name="fb_login_protocol_scheme">fb828647267487031</string>
    <string name="id_token">795335207766-uqcbk75btq0ml412sv3j3c1m2fhethuv.apps.googleusercontent.com</string>
    <string name="google_login_error">Возникла ошибка при входе с помощью Google аккаунта</string>
    <string name="facebook_login_error">Возникла ошибка при входе с помощью Facebook аккаунта</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="email">Email</string>
    <string name="phone">Телефон</string>
    <string name="cancel">Отмена</string>
    <string name="confirm">Подтвердить</string>
    <string name="registration">Регистрация</string>
    <string name="error_occurred_try_again">Произошла ошибка. Попробуйте ещё раз</string>
    <string name="loading_message">Аккуратно пролистываем страницы</string>
    <string name="you_signed_as">Вы вошли как\n%s</string>
    <string name="looking_books">Ищем по полкам</string>
    <string name="adding_book">Добавление книги</string>
    <string name="name">Имя</string>
    <string name="author">Автор</string>
    <string name="publisher">Издатель</string>
    <string name="publish_date">Дата издания (год)</string>
    <string name="description">Описание</string>
    <string name="isbn">ISBN</string>
</resources>
