<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_collections_bookmark_black_24dp"
            android:title="@string/my_books" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/my_requests" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>
</menu>
