<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/adding_book"
            app:titleTextAppearance="@style/ToolbarTextAppearance" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_main"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_book_cover_gradient"
                app:layout_constraintDimensionRatio="96:136"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_cover">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    style="@style/AddBookEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textCapSentences"
                    tools:text="asdad" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/til_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_isbn"
                    style="@style/AddBookEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/isbn"
                    android:inputType="textCapSentences"
                    tools:text="asdad" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/til_isbn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_author"
                    style="@style/AddBookEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/author"
                    android:inputType="textCapSentences"
                    tools:text="asdad" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_author">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_publisher"
                    style="@style/AddBookEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/publisher"
                    android:inputType="textCapSentences"
                    tools:text="asdad" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_publisher">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_date"
                    style="@style/AddBookEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/publish_date"
                    android:inputType="textEmailAddress"
                    tools:text="asdad" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_description"
                    style="@style/AddBookEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="phone"
                    tools:text="asdad" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_blue_stroke"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="18dp"
                android:paddingTop="12dp"
                android:paddingEnd="18dp"
                android:paddingBottom="12dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/btn_confirm"
                app:layout_constraintTop_toBottomOf="@id/til_description"
                app:layout_constraintTop_toTopOf="@id/btn_confirm" />

            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_blue_solid"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="18dp"
                android:paddingTop="12dp"
                android:paddingEnd="18dp"
                android:paddingBottom="12dp"
                android:text="@string/confirm"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_description"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>