<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:civ_border_width="0dp"
            android:layout_margin="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clt_sign_info"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_height="24dp"
                android:layout_width="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_google_logo" />

            <TextView
                android:fontFamily="@font/rbt_medium"
                android:id="@+id/tv_sign_info"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_width="match_parent"
                android:textColor="@color/colorGoogle"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_logo"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Signed in as kenzhemir@gmail.com" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ProfileEditText"
                android:hint="@string/first_name"
                android:id="@+id/edt_first_name"
                android:inputType="textCapSentences"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:text="asdad" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ProfileEditText"
                android:hint="@string/last_name"
                android:id="@+id/edt_last_name"
                android:inputType="textCapSentences"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:text="asdad" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ProfileEditText"
                android:hint="@string/email"
                android:id="@+id/edt_email"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:text="asdad" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ProfileEditText"
                android:hint="@string/phone"
                android:id="@+id/edt_phone"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:text="asdad" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:background="@drawable/bg_blue_stroke"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/btn_cancel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingBottom="12dp"
                android:paddingEnd="18dp"
                android:paddingStart="18dp"
                android:paddingTop="12dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:background="@drawable/bg_blue_solid"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/btn_confirm"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:paddingBottom="12dp"
                android:paddingEnd="18dp"
                android:paddingStart="18dp"
                android:paddingTop="12dp"
                android:text="@string/confirm"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

