<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_book"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/book_image"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:id="@+id/rl_book_info"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_toEndOf="@+id/image_book"
            android:paddingTop="8dp"
            android:paddingBottom="5dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/textDarker"
                android:layout_marginBottom="4dp"
                android:maxLines="2"
                android:ellipsize="end"
                tools:text="The Google Story" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_above="@id/tv_publisher"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="David A. Wise, Mark Malseed" />

            <TextView
                android:id="@+id/tv_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="12sp"
                android:textColor="@color/text"
                tools:text="Random House Digital, Inc." />

            <TextView
                android:id="@+id/tv_publish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:textSize="12sp"
                android:textColor="@color/text"
                tools:text="15.11.2005" />

        </RelativeLayout>

        <View
            android:id="@+id/list_item_divider"
            android:layout_height="1dp"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_toEndOf="@id/image_book"
            android:layout_alignParentBottom="true"
            android:background="@color/divider" />

        <ImageView
            android:id="@+id/iv_request_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_below="@id/rl_book_info"
            android:layout_toStartOf="@+id/iv_info_icon"
            android:layout_margin="8dp"
            android:contentDescription="@string/request_book"
            app:srcCompat="@drawable/ic_request_book_24px" />

        <ImageView
            android:id="@+id/iv_info_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:layout_below="@id/rl_book_info"
            android:contentDescription="@string/book_info"
            app:srcCompat="@drawable/ic_info_24px_outlined" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>